Deliverable component split into two - one to show inside timeline and the other 2 show as time line header Extra space issue on agenda item as time line header ... which will be resolved as a part of design implementation

--- a/app/react/components/AgendaItemAsTimelineHeader/index.css
+++ b/app/react/components/AgendaItemAsTimelineHeader/index.css
@@ -38,17 +38,23 @@
 }
 
 .statusContainer {
-  float: right;
-  margin-top: -15px;
+  composes: pull-right from global;
+  margin-top: -5px;
   margin-right: 0px;
 }
 
-.actionsContainer {
+.timeContainer {
   composes: col-xs-12 from global;
-  margin-top: -15px;
+  margin-top: 5px;
   padding: 0px;
   color : #ffffff;
-  clear: both;
+  min-height: 25px;
+
+}
+
+.discussLink {
+  composes: hover-inline from '../../styles/modules/hover.css';
+  composes: pull-right from global;
 }
 
 .agendaItemIcon {
@@ -58,8 +64,8 @@
 }
 
 .actionBtn {
-  composes: hover-inline from '../../styles/modules/hover.css';
-  composes: btn btn-sm btn-default from global;
+  composes: btn btn-xs btn-default from global;
+  margin: -1px 0px;
 }
 
 .agendaItemIconContainer {
