--- a/app/react/components/DeliverableInTimeline/index.css
+++ b/app/react/components/DeliverableInTimeline/index.css
@@ -1,16 +1,17 @@
 .root {
   composes: hover-container from '../../styles/modules/hover.css';
   position: relative;
-  margin: 5px 40px 5px 0px;
+  margin: 5px 0px;
   padding: 5px 0px;
+  color : #89949E;
 }
 
-.root-archived {
+.rootArchived {
   composes: root;
   opacity: 0.5;
 }
 
-.user-container {
+.userContainer {
   display: table-cell;
   min-width: 60px;
   max-width: 60px;
@@ -18,185 +19,19 @@
   vertical-align: top;
 }
 
-.row {
-  composes: row from global;
-  min-height: 2em;
-}
-
-.full-width {
-  composes: col-sm-12 from global;
-}
-
-.title-container {
-  font-weight: 600;
-  color: #ffffff;
-  text-align: left;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  white-space: pre-wrap;
-
-  -ms-word-break: break-all;
-  word-break: break-word;
-}
-
-.content-container {
-  display: table-cell;
-  width: 100%;
-}
-
-.status-container {
-  composes: pull-right from global;
-  margin-top: -5px;
-  margin-right: 0px;
-}
-
-.meta-container {
-  composes: row from global;
-  margin: 0px;
-  padding-top: 5px;
-  border-top: 1px solid #ffffff;
-}
-
-.meta-container-row {
-  composes: col-xs-12 from global;
-}
-
-.meta-content {
-  composes: col-xs-12 col-md-6 from global;
-  padding: 0px;
-  color : #89949E;
-}
-
-.meta-content:last-of-type {
-  text-align: right;
-}
-
-.meta-label {
-  font-weight: 100;
-  color: #cccccc;
-}
-
-.time-container {
+.timeContainer {
   color : #9aa5af;
   min-height: 23px;
   margin-top: 5px;
 }
 
-.discuss-link {
-  composes: hover-inline from '../../styles/modules/hover.css';
-  composes: pull-right from global;
-}
-
-.discuss-link-hide {
-  display: none;
-}
-
-.deliverable-icon {
+.deliverableIcon {
   composes: fa fa-tasks from global;
   float: left;
   padding: 5px 10px 0px 0px;
 }
 
-.editable-user-container {
-  composes: pull-right from global;
-  border: none;
-  box-shadow: none;
-  padding: 0px;
-  outline: none;
-  border-width: 0px;
-  background: transparent;
-  cursor: pointer;
-}
-
-.user-label {
-  composes: text-muted pull-right from global;
-  padding: 5px 5px 0px 0px;
-}
-
-.due-date-container {
-  composes: pull-right from global;
-}
-
-.editable-due-date-container {
-  max-width: 100px;
-  padding: 5px;
-  box-shadow: none;
-  border: none;
-  outline: none;
-  border-width: 0px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  background: #eeeeee;
-  cursor: pointer;
-}
-
-.agenda-item-container {
-}
-
-.editable-agenda-item-container {
-  max-width: 100px;
-  padding: 5px;
-  box-shadow: none;
-  border: none;
-  outline: none;
-  border-width: 0px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  background: #eeeeee;
-  cursor: pointer;
-}
-
-.due-on {
-  font-weight: 600;
-  color: #57C1E8;
-}
-
-.due-on-label {
-  color: #cccccc;
-}
-
-.action-btn {
-  composes: btn btn-xs btn-default from global;
-  margin: -1px 0px;
-}
-
-.archive-wrapper {
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  background-color: #ffffff;
-  opacity: 0.6;
-  z-index: 100;
-}
-
-.title {
-  composes: col-xs-12 col-sm-8 from global;
-  padding: 0px;
-}
-
-.assignee {
-  composes: col-xs-6-pull-right col-sm-4 from global;
-  padding: 0px;
-}
-
-
-.message-root {
-  position: relative;
-  width: 100%;
-  padding: 5px 0px;
-  color : #89949E;
-}
-
-.message-root-archived {
-  composes: message-root;
-  opacity: 0.5;
-}
-
-.message-container {
+.contentContainer {
   position: relative;
   display: table-cell;
   width: 100%;
@@ -204,7 +39,7 @@
   padding: 0px 30px 0px 0px;
 }
 
-.message-content {
+.content {
   padding-right: 20px;
   width: 100%;
   overflow-wrap: break-word;
@@ -219,7 +54,8 @@
   hyphens: auto;
 }
 
-.options-menu {
+.actionDropdown {
+  composes: hover-inline from '../../styles/modules/hover.css';
   position: absolute;
   display:none;
   margin-left: 1em;
@@ -227,39 +63,35 @@
   top: 0px;
 }
 
-.message-root:hover .options-menu {
-  display:block;
-}
-
-.message-root:hover{
+.root:hover{
   background-color: #eeeeee;
 }
 
-.gear-icon {
+.gearIcon {
   composes: fa fa-gear fa-lg text-muted from global;
   cursor: pointer;
 }
 
-.user-name {
+.userName {
   font-weight: 600;
 }
 
-.deliverable-label {
+.deliverableLabel {
   font-weight: 600;
 }
 
-.message-deliverable-title {
+.title {
   color: #57C1E8;
   font-weight: 600;
   text-decoration: none;
   cursor: pointer;
 }
 
-.message-deliverable-title-archived {
-  composes: message-deliverable-title;
+.titleArchived {
+  composes: title;
   cursor: default;
 }
 
-.resolved-status {
+.resolvedStatus {
   composes: text-info pull-right from global;
 }
